--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -425,13 +425,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CSS\Index.css" />
+    <Content Include="IMG\BG.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HTML\cadastro.cshtml" />
+    <Content Include="HTML\Index.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -446,7 +448,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CSHARP\BANCODEDADOS\" />
-    <Folder Include="CSS\" />
     <Folder Include="JAVASCRIPT\" />
   </ItemGroup>
   <PropertyGroup>
