--- a/Projeto_Final/packages.config
+++ b/Projeto_Final/packages.config
@@ -4,6 +4,8 @@
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net461" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net461" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net461" />
