--- a/Projeto_Final/packages.config
+++ b/Projeto_Final/packages.config
@@ -32,7 +32,7 @@
   <package id="Microsoft.AspNetCore.Mvc.Core" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.AspNetCore.Mvc.Razor" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Razor" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.Razor.Extensions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net461" />
@@ -87,6 +87,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
