--- a/Projeto_Final/packages.config
+++ b/Projeto_Final/packages.config
@@ -34,6 +34,7 @@
   <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Mvc.Razor" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.Razor.Extensions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Razor.Host" version="1.1.8" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" targetFramework="net461" />
@@ -58,6 +59,8 @@
   <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Composite" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Localization" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Localization.Abstractions" version="2.2.0" targetFramework="net461" />
@@ -67,9 +70,12 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.30" targetFramework="net461" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net461" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net461" />
@@ -85,22 +91,32 @@
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net461" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
@@ -116,11 +132,13 @@
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
