--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Projeto_Final</RootNamespace>
     <AssemblyName>Projeto_Final</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress>true</Use64BitIISExpress>
     <IISExpressSSLPort />
@@ -530,6 +530,8 @@
     <Content Include="HTMLCSS\Listagem\listagem_setores.cshtml" />
     <Content Include="HTMLCSS\Registro\registro_setores.cshtml" />
     <Content Include="HTML TEMP\Passagem\registrando_setor.cshtml" />
+    <Content Include="HTMLCSS\Registro\matricula.cshtml" />
+    <Content Include="HTML TEMP\Passagem\matriculando.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
