--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -517,24 +517,25 @@
     <Content Include="HTMLCSS\Registro\registro.cshtml" />
     <Content Include="HTMLCSS\Listagem\Listagem.cshtml" />
     <Content Include="HTMLCSS\main.cshtml" />
-    <Content Include="HTML TEMP\Checagem\check_login.cshtml" />
-    <Content Include="HTML TEMP\Checagem\check_registro.cshtml" />
-    <Content Include="HTML TEMP\Checagem\check_listagem.cshtml" />
+    <Content Include="HTMLTEMP\Checagem\check_login.cshtml" />
+    <Content Include="HTMLTEMP\Checagem\check_registro.cshtml" />
+    <Content Include="HTMLTEMP\Checagem\check_listagem.cshtml" />
     <Content Include="HTMLCSS\Registro\registro_turma.cshtml" />
-    <Content Include="HTML TEMP\Passagem\registrando.cshtml" />
-    <Content Include="HTML TEMP\Passagem\registrando_turma.cshtml" />
+    <Content Include="HTMLTEMP\Passagem\registrando.cshtml" />
+    <Content Include="HTMLTEMP\Passagem\registrando_turma.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_turma.cshtml" />
     <Content Include="HTMLCSS\Registro\registro_sala.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_sala.cshtml" />
-    <Content Include="HTML TEMP\Passagem\registrando_sala.cshtml" />
+    <Content Include="HTMLTEMP\Passagem\registrando_sala.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_setores.cshtml" />
     <Content Include="HTMLCSS\Registro\registro_setores.cshtml" />
-    <Content Include="HTML TEMP\Passagem\registrando_setor.cshtml" />
+    <Content Include="HTMLTEMP\Passagem\registrando_setor.cshtml" />
     <Content Include="HTMLCSS\Registro\matricula.cshtml" />
-    <Content Include="HTML TEMP\Passagem\matriculando.cshtml" />
+    <Content Include="HTMLTEMP\Passagem\matriculando.cshtml" />
     <Content Include="HTMLCSS\Listagem\Lista_alunos\aluno_turma.cshtml" />
     <Content Include="HTMLCSS\Listagem\Lista_alunos\aluno.cshtml" />
     <Content Include="HTMLCSS\Listagem\Lista_alunos\aluno_curso.cshtml" />
+    <Content Include="HTMLTEMP\Exclusao\delete_sala.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
