--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Projeto_Final</RootNamespace>
     <AssemblyName>Projeto_Final</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress>true</Use64BitIISExpress>
     <IISExpressSSLPort />
@@ -517,7 +517,7 @@
     <Content Include="HTMLCSS\Index.cshtml" />
     <Content Include="HTMLCSS\Registro\registro.cshtml" />
     <Content Include="HTMLCSS\Listagem\Listagem.cshtml" />
-    <Content Include="HTMLCSS\main.cshtml" />
+    <Content Include="HTMLCSS\Main\main.cshtml" />
     <Content Include="HTMLTEMP\Checagem\check_login.cshtml" />
     <Content Include="HTMLTEMP\Checagem\check_registro.cshtml" />
     <Content Include="HTMLTEMP\Checagem\check_listagem.cshtml" />
@@ -541,7 +541,11 @@
     <Content Include="HTMLTEMP\Exclusao\delete_turma.cshtml" />
     <Content Include="HTMLTEMP\Exclusao\delete_setor.cshtml" />
     <Content Include="HTMLTEMP\Exclusao\delete_matricula.cshtml" />
-    <Content Include="HTMLCSS\user_area.cshtml" />
+    <Content Include="HTMLCSS\UserArea\userarea_aluno.cshtml" />
+    <Content Include="HTMLCSS\Main\main_userside.cshtml" />
+    <Content Include="HTMLCSS\Main\main_teachside.cshtml" />
+    <Content Include="HTMLCSS\UserArea\userarea_prof.cshtml" />
+    <Content Include="HTMLCSS\UserArea\userarea_admin.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
