--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Projeto_Final</RootNamespace>
     <AssemblyName>Projeto_Final</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress>true</Use64BitIISExpress>
     <IISExpressSSLPort />
@@ -491,6 +491,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HTMLCSS\CSS\registro_sala_setor.css" />
     <Content Include="HTMLCSS\CSS\userarea.css" />
     <Content Include="HTMLCSS\CSS\registro_turma.css" />
     <Content Include="HTMLCSS\CSS\sidebar.css" />
@@ -525,11 +526,10 @@
     <Content Include="HTMLTEMP\Passagem\registrando.cshtml" />
     <Content Include="HTMLTEMP\Passagem\registrando_turma.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_turma.cshtml" />
-    <Content Include="HTMLCSS\Registro\registro_sala.cshtml" />
+    <Content Include="HTMLCSS\Registro\registro_sala_setor.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_sala.cshtml" />
     <Content Include="HTMLTEMP\Passagem\registrando_sala.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_setores.cshtml" />
-    <Content Include="HTMLCSS\Registro\registro_setores.cshtml" />
     <Content Include="HTMLTEMP\Passagem\registrando_setor.cshtml" />
     <Content Include="HTMLCSS\Registro\matricula.cshtml" />
     <Content Include="HTMLTEMP\Passagem\matriculando.cshtml" />
