--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -500,6 +500,7 @@
     <Content Include="HTMLCSS\CSS\Listagem.css" />
     <Content Include="HTMLCSS\CSS\registro.css" />
     <Content Include="HTMLCSS\CSS\Index.css" />
+    <Content Include="IMG\fundo_registro.jpg" />
     <Content Include="IMG\slide1.jpg" />
     <Content Include="IMG\slide2.jpg" />
     <Content Include="IMG\slide3.jpeg" />
@@ -553,6 +554,9 @@
     <Content Include="HTMLCSS\UserArea\edit_usearea\edit_user_admin.cshtml" />
     <Content Include="HTMLCSS\UserArea\edit_usearea\edit_user_profe.cshtml" />
     <Content Include="HTMLCSS\Listagem\edit_listagem\edit_list_user.cshtml" />
+    <Content Include="HTMLCSS\Listagem\edit_listagem\editing_list_user.cshtml" />
+    <Content Include="HTMLCSS\Listagem\edit_listagem\editing_list_turma.cshtml" />
+    <Content Include="HTMLCSS\Listagem\edit_listagem\editing_list_matricula.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
