--- a/Projeto_Final/Projeto_Final.csproj
+++ b/Projeto_Final/Projeto_Final.csproj
@@ -541,18 +541,13 @@
     <Content Include="HTMLCSS\Listagem\remove\delete_turma.cshtml" />
     <Content Include="HTMLCSS\Listagem\remove\delete_setor.cshtml" />
     <Content Include="HTMLCSS\Listagem\remove\delete_matricula.cshtml" />
-    <Content Include="HTMLCSS\UserArea\userarea_aluno.cshtml" />
+    <Content Include="HTMLCSS\UserArea\userarea.cshtml" />
     <Content Include="HTMLCSS\Provas\registrar_notas.cshtml" />
-    <Content Include="HTMLTEMP\Checagem\check_userarea.cshtml" />
     <Content Include="HTMLCSS\UserArea\edit_usearea\edit_user.cshtml" />
     <Content Include="HTMLCSS\Listagem\Listagem_Professores.cshtml" />
     <Content Include="HTMLCSS\Listagem\Listagem_Admins.cshtml" />
     <Content Include="HTMLCSS\Listagem\listagem_matriculas.cshtml" />
     <Content Include="HTMLCSS\UserArea\edit_usearea\editin_user.cshtml" />
-    <Content Include="HTMLCSS\UserArea\userarea_prof.cshtml" />
-    <Content Include="HTMLCSS\UserArea\userarea_admin.cshtml" />
-    <Content Include="HTMLCSS\UserArea\edit_usearea\edit_user_admin.cshtml" />
-    <Content Include="HTMLCSS\UserArea\edit_usearea\edit_user_profe.cshtml" />
     <Content Include="HTMLCSS\Listagem\edit_listagem\edit_list_user.cshtml" />
     <Content Include="HTMLCSS\Listagem\edit_listagem\editing_list_user.cshtml" />
     <Content Include="HTMLCSS\Listagem\edit_listagem\editing_list_turma.cshtml" />
